--- a/style.css
+++ b/style.css
@@ -51,11 +51,11 @@ body {
   color: hsl(228, 45%, 44%);
 }
 
-.container {
-  width: 500px;
-  height: 375px;
-  min-width: 500px;
-  min-height: 375px;
+main {
+  width: 31.25rem;
+  height: 23.4375rem;
+  min-width: 31.25rem;
+  min-height: 23.4375rem;
 }
 
 .box {
@@ -66,26 +66,31 @@ body {
   display: flex;
 }
 
+
 .desktop__img {
   border-bottom-left-radius: 10px;
   border-top-left-radius: 10px;
+  width: 100%;
+  height: 100%;
 }
 
 .mobile__img {
+  width: 100%;
+  height: 100%;
   display: none;
 }
 
 .box__description {
   width: 50%;
   text-align: left;
-  padding: 20px;
+  padding: 1.25rem;
 }
 
 .box__description p:first-of-type {
   font-family: "Montserrat", serif;
-  font-size: 11px;
-  letter-spacing: 2px;
-  margin-bottom: 15px;
+  font-size: .6875rem;
+  letter-spacing: .125rem;
+  margin-bottom: .9375rem;
   color: var(--dark-grayish-blue);
   font-weight: 500;
   text-transform: uppercase;
@@ -94,14 +99,14 @@ body {
 h1 {
   font-family: "Fraunces", serif;
   font-weight: 700;
-  margin-bottom: 15px;
+  margin-bottom: .9375rem;
   color: var(--very-dark-blue);
 }
 
 .box__description p:last-of-type {
   font-family: "Montserrat", serif;
-  font-size: 13px;
-  margin-bottom: 15px;
+  font-size: .8125rem;
+  margin-bottom: .9375rem;
   color: var(--dark-grayish-blue);
   font-weight: 500;
 }
@@ -110,27 +115,27 @@ h1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 21px;
+  margin-bottom: 1.3125rem;
 }
 
 .box__price-item1 span {
   color: hsl(158, 36%, 37%);
   font-family: "Fraunces", serif;
-  font-size: 25px;
+  font-size: 1.5625rem;
   font-weight: 700;
-  padding-right: 5px;
+  padding-right: .3125rem;
 }
 
 .box__price-item2 span {
-  margin-right: 50px;
+  margin-right: 3.125rem;
 }
 
 .box__price-item2 span {
   color: var(--dark-grayish-blue);
   font-family: "Montserrat", serif;
-  font-size: 12px;
+  font-size: .75rem;
   text-decoration: line-through;
-  padding-left: 5px;
+  padding-left: .3125rem;
 }
 
 .box__cart {
@@ -139,7 +144,7 @@ h1 {
   align-content: center;
   width: 100%;
   background-color: var(--dark-cyan);
-  padding: 11px 0;
+  padding: .5rem 0;
   border-radius: 7px;
 }
 
@@ -150,13 +155,13 @@ h1 {
 
 .box__cart-img,
 .box__cart-text {
-  padding: 0 5px;
+  padding: 0 .3125rem;
 }
 
 .box__cart-text {
   font-family: "Montserrat", serif;
   color: var(--white);
-  font-size: 12px;
+  font-size: .75rem;
   font-weight: 600;
 }
 
@@ -172,11 +177,11 @@ h1 {
 
 @media screen and (max-width: 700px) {
 
-  .container {
-    width: 470px;
-    height: 345px;
-    min-width: 470px;
-    min-height: 345px;
+  main {
+    width: 29.375rem;
+    height: 21.5625rem;
+    min-width: 29.375rem;
+    min-height: 21.5625rem;
   }
 
   .desktop__img {
@@ -188,33 +193,33 @@ h1 {
   }
 
   .box__description p:first-of-type {
-    font-size: 10px;
-    margin-bottom: 12px;
+    font-size: .625rem;
+    margin-bottom: .75rem;
   }
 
 
   h1 {
-    font-size: 27.2px;
-    margin-bottom: 12px;
+    font-size: 1.7rem;
+    margin-bottom: .75rem;
   }
 
   .box__description p:last-of-type {
-    font-size: 12px;
+    font-size: .75rem;
   }
 
   .box__price-item1 span {
-    font-size: 24px;
-    padding-right: 5px;
+    font-size: 1.5rem;
+    padding-right: .3125rem;
   }
 
   .box__price-item2 span {
-    font-size: 11px;
-    padding-left: 5px;
+    font-size: .6875rem;
+    padding-left: .3125rem;
   }
 
 
   .box__cart {
-    padding: 10px 0;
+    padding: .625rem 0;
   }
 
 }
@@ -229,7 +234,7 @@ h1 {
 
 @media screen and (max-width: 500px) {
 
-  .container {
+  main {
     width: 450px;
     height: 325px;
     min-width: 450px;
@@ -289,7 +294,7 @@ h1 {
 
 @media screen and (max-width: 480px) {
 
-  .container {
+  main {
     width: 310px;
     height: 500px;
     min-width: 310px;
@@ -298,6 +303,7 @@ h1 {
 
 
 .box {
+  height: 105%;
   display: flex;
   flex-direction: column;
 }
@@ -317,7 +323,7 @@ h1 {
   .mobile__img {
     display: block;
     width: 100%;
-    height: 40%;
+    height: 100%;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
   }
